new pin auth related chnages